# sparrow-datums

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: .env.example  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
_licences/: apache.txt  bsd3.txt  mit.txt
docker/: Dockerfile  README.md
docs/source/: conf.py  index.rst  sparrow_datums.boxes.AugmentedBoxes.rst  sparrow_datums.boxes.Boxes.rst  sparrow_datums.boxes.FrameAugmentedBoxes.rst  sparrow_datums.boxes.FrameBoxes.rst  sparrow_datums.boxes.SingleAugmentedBox.rst  sparrow_datums.boxes.SingleBox.rst  sparrow_datums.boxes.iou.area.rst  sparrow_datums.boxes.iou.intersection.rst  sparrow_datums.boxes.iou.pairwise_iou.rst  sparrow_datums.chunk.Chunk.rst  sparrow_datums.tracking.BoxTracking.rst  sparrow_datums.types.FloatArray.rst  sparrow_datums.types.PType.rst
sparrow_datums/: __init__.py  __main__.py  boxes.py  boxes_test.py  chunk.py  chunk_test.py  chunk_types.py  chunk_types_test.py  example.py  example_test.py  iou.py  iou_test.py  types.py  types_test.py
sparrow_datums/boxes/: __init__.py  augmented_boxes.py  augmented_boxes_test.py  box_types.py  box_types_test.py  boxes.py  boxes_test.py  frame_augmented_boxes.py  frame_augmented_boxes_test.py  frame_boxes.py  frame_boxes_test.py  iou.py  iou_test.py  nms.py  nms_test.py  ops.py  ops_test.py  single_augmented_box.py  single_box.py  (+4 more)
(+23 files in other folders)
