[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparrow-datums"
version = "0.11.1"
authors = [
    {name = "Sparrow Computing", email = "ben@sparrow.dev"},
]
requires-python = ">=3.12"
dependencies = [
    "fire",
    "numpy",
    "xmltodict",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "pytest",
    "pytest-cov",
    "uv",
]

[tool.pylint.format]
disable = ["all"]
enable = ["unused-import"] 