[metadata]
name = sparrow-datums
version = 0.8.6
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires = 
    fire
    numpy

[options.extras_require]
dev =
    black
    isort
    jupyter
    pydocstyle
    pylint
    pytest
    pytest-cov

[pylint.FORMAT]
disable = all
enable = unused-import
