[metadata]
name = sparrow-datums
version = 0.9.5
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires = 
    datumaro
    fire
    numpy
    opencv-python
    xmltodict

[options.extras_require]
dev =
    black
    isort
    jupyter
    pydocstyle
    pylint
    pytest
    pytest-cov

[pylint.FORMAT]
disable = all
enable = unused-import
